--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap");
 body {
     box-sizing: border-box;
-    background-image: url("./images/pattern-background-mobile.svg");
     background-color: hsl(225, 100%, 94%);
+    background-image: url("./images/pattern-background-mobile.svg");
+
     background-repeat: no-repeat;
     font-size: 16px;
     font-family: "Red Hat Display", sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 section {
@@ -41,6 +45,8 @@ p {
 .price {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    width: 50%;
 }
 .annual-plan {
     font-weight: 900;
@@ -64,5 +70,15 @@ p {
     border: none;
     font-weight: 900;
     padding-bottom: 20px;
+    color: hsl(224, 23%, 55%);
+}
+@media (min-width: 375px) {
+    body {
+        background-color: hsl(225, 100%, 94%);
+        background-image: url("./images/pattern-background-desktop.svg");
+    }
+}
+
+.currency {
     color: hsl(224, 23%, 55%);
 }
