--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ section {
 h1 {
     margin: 0;
     margin-top: 15px;
+    color: hsl(223, 47%, 23%);
 }
 p {
     font-weight: 500;
@@ -57,12 +58,14 @@ p {
 }
 .annual-plan {
     font-weight: 900;
+    color: hsl(223, 47%, 23%);
 }
 .change {
     text-decoration: none;
     background-color: inherit;
     border: none;
     text-decoration: underline;
+    color: hsl(245, 75%, 52%);
 }
 .change:hover {
     cursor: pointer;
